# juniper-vue-example

./: .gitignore
.github/docker/: scratch.Dockerfile
.github/workflows/: server.yml
client/: README.md  package.json
client/src/: App.vue  main.ts  shims-vue.d.ts
client/src/components/: GameCircle.vue
server/: Cargo.toml
server/src/: context.rs  database.rs  main.rs  models.rs  schema.rs
server/src/websocket/: server.rs  session.rs
