[package]
name = "juniper-vue-example"
version = "0.1.0"
authors = ["enfipy <enfipy@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
log = "0.4.8"
futures = { version = "=0.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7.3"

actix = "0.9.0"
actix-rt = "1.0"
actix-web = "2.0"
actix-cors = "0.2"
actix-web-actors = "2.0"
juniper = { git = "https://github.com/instrumentisto/juniper", branch = "async-await-subscriptions", features = ["async"] }
